fix(): デザイン修正

--- a/app/App.scss
+++ b/app/App.scss
@@ -1,7 +1,7 @@
 html,
 body {
     height: 100%;
-    overflow: hidden;
+    overscroll-behavior: none;
 
     &::-webkit-scrollbar {
         display: none;
